--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,3 +1,18 @@
+# Copyright 2024 Robert Cronin
+# 
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+# 
+#     https://www.apache.org/licenses/LICENSE-2.0
+# 
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -44,14 +59,10 @@ spec:
   - host: blog.robertcronin.com
     http:
       paths:
-      - pathType: Prefix
-        path: /
+      - path: /
+        pathType: Prefix
         backend:
           service:
             name: blog-robertcronin-com
             port:
               number: 80
-  # tls:
-  # - hosts:
-  #   - blog.robertcronin.com
-  #   secretName: blog-robertcronin-com-tls
